# opencase

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  .windsurfrules  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  DISCLAIMER.md  GOVERNANCE.md  LICENSE  LICENSING.md  LOCAL_DEPLOYMENT.md  QUICKSTART.md  README.md  RUNTIME_FIXES.md  SECURITY.md  VERSIONING.md  pyproject.toml
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/workflows/: ai-code-review.yml  build-container.yml  ci.yml  format-lint.yml  unit-tests.yml
backend/: .dockerignore  .env.test  README.md  SYSTEM_PROMPT.md  allowed_types.txt  config.json.example  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial_schema.py  0002_refresh_tokens.py  0003_documents_and_prompts.py  0004_task_submissions.py  0005_document_ingestion_status.py  0006_chat_schema.py
backend/app/: main.py
backend/app/api/: auth.py  chats.py  documents.py  firms.py  health.py  helpers.py  matter_access.py  matters.py  prompts.py  tasks.py  users.py
backend/app/api/schemas/: auth.py
backend/app/chunking/: __init__.py  models.py  service.py  strategies.py
backend/app/core/: auth.py  config.py  constants.py  metrics.py  permissions.py  telemetry.py
backend/app/db/: session.py
backend/app/db/models/: __init__.py  chat_feedback.py  chat_query.py  chat_session.py  document.py  firm.py  matter.py  matter_access.py  prompt.py  refresh_token.py  user.py
backend/app/embedding/: __init__.py  models.py  service.py
backend/app/extraction/: __init__.py  models.py  tika.py
backend/app/ingestion/: service.py
backend/app/rag/: pipeline.py
backend/app/storage/: hashing.py  s3.py
backend/app/vectorstore/: __init__.py  models.py  service.py
backend/app/workers/: __init__.py  broker.py  registry.py
backend/app/workers/tasks/: __init__.py  chunk_document.py  embed_chunks.py  extract_document.py  ingest_document.py  ping.py  sleep.py
backend/docker/: Dockerfile  entrypoint.sh
backend/scripts/: create_admin.py  seed_demo.py
backend/tests/: conftest.py  factories.py  test_auth.py  test_auth_endpoints.py  test_auth_integration.py  test_chats.py  test_chunking.py  test_chunking_observability.py  test_config.py  test_db_schema.py  test_docker.py  test_document_prompt_endpoints.py  test_document_upload_integration.py  test_embed_chunks_task.py  test_embedding.py  test_embedding_integration.py  test_embedding_observability.py  test_entity_endpoints.py  test_entity_integration.py  test_extraction.py  test_extraction_integration.py  test_extraction_observability.py  test_health.py  test_ingestion_pipeline_integration.py  test_integration.py  test_logging.py  test_minio_integration.py  test_observability.py  test_permissions.py  test_rag_pipeline.py  test_reingest_endpoint.py  test_smoke.py  test_storage_service.py  test_tasks_api.py  test_telemetry.py  test_vectorstore.py  test_vectorstore_integration.py  test_vectorstore_observability.py  test_workers.py
backend/tests/features/api/: observability.feature
backend/tests/features/ingestion/: cloud_ingestion.feature  deduplication.feature  document_storage.feature  embedding_and_storage.feature  legal_hold.feature  manual_upload.feature  text_extraction.feature
backend/tests/fixtures/: config.json  test.env
backend/tests/integration/: test_chatbot_integration.py
backend/tests/step_defs/api/: test_observability.py
cli/: README.md  pyproject.toml
cli/gideon_cli/: __init__.py  common.py  config.py  main.py  output.py  tokens.py
cli/gideon_cli/commands/: auth.py  documents.py  firms.py  health.py  matters.py  mfa.py  prompts.py  tasks.py  users.py
cli/opencase_cli/: __init__.py  common.py  config.py  main.py  output.py  tokens.py
cli/opencase_cli/commands/: auth.py  documents.py  firms.py  health.py  matters.py  mfa.py  prompts.py  users.py
cli/tests/: conftest.py  test_auth.py  test_config.py  test_documents.py  test_firms.py  test_health.py  test_matters.py  test_mfa.py  test_tasks.py  test_tokens.py  test_users.py
docs/: ARCHITECTURE.md  AUTHENTICATION.md  BDD_TESTS.md  CLI.md  DEFERRED.md  DEPLOYMENT.md  ERD.md  FEATURES.md  HISTORY.md  INFRASTRUCTURE.md  LEGAL_COMPLIANCE.md  LICENSING.md  LOCAL_DEPLOYMENT.md  OBSERVABILITY.md  ROADMAP.md  SETTINGS.md  TASKS.md  TOC.md
docs/adr/: 0001-recursive-character-chunking-strategy.md  README.md
docs/coding_standards/: README.md  clean-architecture.md  clean-code.md  design-patterns.md  gideon-essentials.md  references.md
docs/flows/: authentication.md  background-jobs.md  ingestion.md  permission-filtering.md  rag-query.md
infrastructure/: docker-compose.integration.yml  docker-compose.local-build.yml  docker-compose.override.yml.example  docker-compose.yml
infrastructure/postgres/: init.sql
scripts/: _ollama.py  analyze_chunks.py  backfill_chunk_text.py  build-backend.sh  chunk_documents.py  collect-environment.ps1  collect-environment.sh  eval_models.py  extract_zips.py  query_model.py  query_users.py  rag_query.py  reset_data.py  search_qdrant.py  seed_demo.py  setup-volumes.sh  submit_task.py  upload_file.py
sdk/: README.md  pyproject.toml
sdk/gideon/: __init__.py  _auth.py  client.py  exceptions.py  hashing.py  session.py
sdk/opencase/: __init__.py  _auth.py  client.py  exceptions.py  session.py
sdk/tests/: conftest.py  test_auth_manager.py  test_client.py  test_entity_methods.py  test_hashing.py  test_session.py
shared/: README.md  pyproject.toml
shared/shared/: __init__.py
shared/shared/models/: __init__.py  auth.py  base.py  chat.py  document.py  enums.py  firm.py  health.py  matter.py  matter_access.py  prompt.py  user.py
shared/tests/: test_models.py
