[project]
name = "opencase"
version = "0.1.0"
description = "AI-powered criminal defense discovery platform"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "OpenCase Contributors" },
]
keywords = ["legal", "discovery", "criminal-defense", "rag"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: FastAPI",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]

dependencies = [
    # API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",

    # Auth
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "pyotp>=2.9",

    # Database
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "asyncpg>=0.30",

    # Vector store
    "qdrant-client>=1.13",

    # RAG / LLM
    "langchain>=0.3",
    "langchain-community>=0.3",
    "langchain-ollama>=0.3",

    # Background jobs
    "celery[redis]>=5.4",

    # Document parsing
    "python-multipart>=0.0.18",

    # Hashing / crypto
    "cryptography>=44",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9",
    "mypy>=1.14",
    "pre-commit>=4.1",
]
test = [
    "pytest>=8.3",
    "pytest-bdd>=8.1",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "factory-boy>=3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "S",    # bandit (security)
    "B",    # bugbear
    "SIM",  # simplify
    "T20",  # print statements
]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
bdd_features_base_dir = "tests/features/"
asyncio_mode = "auto"
