[project]
name = "gideon-sdk"
version = "0.1.0"
description = "Python REST client for the Gideon API"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [{ name = "Gideon Contributors" }]

dependencies = [
    "gideon-shared",
    "httpx>=0.28",
]

[project.optional-dependencies]
dev = ["ruff>=0.9", "mypy>=1.14"]
test = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gideon"]

[tool.uv.sources]
gideon-shared = { workspace = true }

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "S",   # bandit (security)
    "B",   # bugbear
    "SIM", # simplify
    "T20", # print statements
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S104", "S105", "S106", "S603", "S607"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["gideon"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true
