[project]
name = "opencase-shared"
version = "0.1.0"
description = "Shared Pydantic models for OpenCase API and SDK"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [{ name = "OpenCase Contributors" }]

dependencies = [
    "pydantic[email]>=2.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "S",   # bandit (security)
    "B",   # bugbear
    "SIM", # simplify
    "T20", # print statements
]

[tool.mypy]
python_version = "3.12"
strict = true
